using image decorator